# advent_of_code

./: Cargo.toml
2020/: Cargo.toml
2020/src/: main.rs
2020/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
benches/: year_2020.rs  year_2021.rs  year_2022.rs  year_2023.rs
resources/2020/: day1.txt
src/: lib.rs  main.rs  timer.rs
src/year_2020/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/year_2020/inputs/: day6.txt
src/year_2021/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/year_2022/: day1.rs  day2.rs  day3.rs  day4.rs  mod.rs
src/year_2023/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year_2023/inputs/: day5.txt
